--- a/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/SWF_2340-15_8.1.WindowsPhone.csproj
+++ b/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/SWF_2340-15_8.1.WindowsPhone.csproj
@@ -134,6 +134,9 @@
       <Name>SQLite for Windows Phone 8.1</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
