--- a/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/SWF_2340-15_8.1.WindowsPhone.csproj
+++ b/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/SWF_2340-15_8.1.WindowsPhone.csproj
@@ -97,6 +97,12 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NewFriend.xaml.cs">
+      <DependentUpon>NewFriend.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NewRequest.xaml.cs">
+      <DependentUpon>NewRequest.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="register.xaml.cs">
       <DependentUpon>register.xaml</DependentUpon>
@@ -127,6 +133,14 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="NewFriend.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NewRequest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="register.xaml">
       <SubType>Designer</SubType>
